fix: class img-phone only affect the one on small screen

--- a/static/css/developer.css
+++ b/static/css/developer.css
@@ -680,7 +680,9 @@ body {
     margin-top: 0;
 }
 
-.img-phone img{
-  max-width: 50% !important;
-  margin: 16px 0;
+@media (min-width: 767px) {
+  .img-phone img{
+    max-width: 50% !important;
+    margin: 16px 0;
+  }
 }
